fix scrollbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -36,3 +36,29 @@
   font-weight: 600;
   font-style: normal;
 }
+
+
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+/* background of the scrollbar except button or resizer */
+*::-webkit-scrollbar-track {
+  border-radius: 8px;
+}
+
+/* scrollbar itself */
+*::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: #606060;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #909090;
+}
